[gd_scene load_steps=5 format=3 uid="uid://be63ponjlchls"]

[ext_resource type="Script" uid="uid://bsaqoin6dv16f" path="res://scripts/power_up.gd" id="1_0ocr6"]
[ext_resource type="Texture2D" uid="uid://bb17qf4su1565" path="res://assets/PowerUps/power ups.png" id="2_0ocr6"]
[ext_resource type="SpriteFrames" uid="uid://bdntsaymwo7yw" path="res://assets/PowerUps/efectos/powerup_fx.tres" id="3_coxm5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ys6av"]
radius = 4.0

[node name="PowerUp" type="Area2D" groups=["powerups"]]
script = ExtResource("1_0ocr6")
type = 0
atlas_texture = ExtResource("2_0ocr6")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.642857, 0.642857)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_coxm5")
animation = &"speed_pick"
frame = 4
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ys6av")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
